infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-client-pod
  template:
    metadata:
      labels:
        app: ticketing-client-pod
    spec:
      containers:
        - name: ticketing-client-cont
          image: sarathinanavati/ticketing-client
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-client-srv
spec:
  selector:
    app: ticketing-client-pod
  ports:
    - name: ticketing-client
      protocol: TCP
      port: 3000
      targetPort: 3001
