infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders-pod
  template:
    metadata:
      labels:
        app: ticketing-orders-pod
    spec:
      containers:
        - name: ticketing-orders-cont
          image: sarathinanavati/ticketing-orders
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-srv
spec:
  selector:
    app: ticketing-orders-pod
  ports:
    - name: ticketing-orders
      protocol: TCP
      port: 3300
      targetPort: 3000
