infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders-mongo-pod
  template:
    metadata:
      labels:
        app: ticketing-orders-mongo-pod
    spec:
      containers:
        - name: ticketing-orders-mongo-cont
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-mongo-srv
spec:
  selector:
    app: ticketing-orders-mongo-pod
  ports:
    - name: ticketing-orders-mongo-db
      protocol: TCP
      port: 27019
      targetPort: 27017
