infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets-pod
  template:
    metadata:
      labels:
        app: ticketing-tickets-pod
    spec:
      containers:
        - name: ticketing-tickets-cont
          image: sarathinanavati/ticketing-tickets
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-srv
spec:
  selector:
    app: ticketing-tickets-pod
  ports:
    - name: ticketing-tickets
      protocol: TCP
      port: 3300
      targetPort: 3000
